# podcast_proxy

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml  ghcr-publish.yaml
app/: __init__.py
app/feed/: feed_skeleton.xml  routes.py  rss_structure.xml
app/main/: routes.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js
app/stream/: __init__.py  routes.py
app/templates/: index.html
app/utils/: utils.py
tests/: conftest.py  test_feed.py  test_stream.py  test_utils.py
tests/resources/: youtube_feed.xml
