[project]
name = "podcast-proxy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "cachetools>=6.1.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "python-magic>=0.4.27",
    "requests>=2.32.4",
    "validators>=0.35.0",
    "yt-dlp>=2025.6.30",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
